# sar-anomaly-sandbox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  coverage.json  pyproject.toml
configs/data/: synthetic.yaml  telemetry.yaml
data/synthetic/: README.md
data/synthetic/sar/: README.md
docs/: sar_detection.md  telemetry_detection.md
notebooks/: exploration.ipynb  model_comparison.ipynb  synthetic_demo.ipynb
src/data/generators/: README.md  __init__.py  speckle.py  telemetry.py
src/experiments/: run_eval.py  run_generate.py  run_train.py
src/models/baselines/: README.md  __init__.py  rx_detector.py  telemetry_statistical.py
src/models/classical/: __init__.py  telemetry_ml.py
src/models/deep/: __init__.py  lstm_autoencoder.py
src/utils/: config.py  metrics.py
src/visualization/: README.md  sar_dashboard.py  telemetry_dashboard.py
src/visualization/dashboards/: README.md  data_io.py  sar_dashboard.py  telemetry_dashboard.py
tests/: test_app_telemetry.py  test_dashboard.py  test_dashboard_telemetry.py  test_detector_properties.py  test_generators.py  test_integration.py  test_models.py  test_telemetry_detectors.py  test_telemetry_generators.py  test_telemetry_integration.py
